@@ -36,6 +36,7 @@ Version 1.3.6+svn:
    * fixed a glitch with the undo of recruit or recall on high places.
    * Improve rendering of "black stripes": don't hide footsteps and fog
    * Improve rendering of grid : draw under fog, shroud and "black stripes"
+   * Fixed bug #9646: ToD changes not applied to mainmap in replay mode.
  * user interface:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
    * Add an additional line below the minimap in the "Multiplayer->Create game"
